--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     <h1>Homemade Lasagna</h1>
+    <img src="../images/lasagna.webp" alt="Lasagna">
+    
+    <!-- Description -->
+    <h2>Description</h2>
+    <p>
+        Homemade lasagna isn't as hard to make as it seems. Don't be intimidated by all the layers of delicious Italian flavor — try this homemade lasagna recipe today!
+    </p>
 </body>
 </html>
