--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -31,7 +31,7 @@
             <strong>Canned tomatoes:</strong> You'll need a can of tomato sauce and a can of crushed tomatoes.
         </li>
         <li>
-            <strong>Fresh herbs:</strong> For fresh flavor, chop two tablespoons of parsley and crush one clove of garlic
+            <strong>Fresh herbs:</strong> For fresh flavor, chop two tablespoons of parsley and crush one clove of garlic.
         </li>
         <li>
             <strong>Sugar:</strong> A dash of sugar balances out all of the acidity from the tomatoes.
@@ -47,6 +47,29 @@
         </li>
         <li>
             <strong>Eggs:</strong> Eggs make the cheese layer extra creamy. Plus, they act as a binding agent (which means they hold the layer together).
+        </li>
+    </ul>
+
+    <!-- Steps -->
+    <h2>Steps</h2>
+    <p>
+        Making homemade lasagna much easier than it looks. You'll find the full, step-by-step recipe below — but here's a brief overview of what you can expect:
+    </p>
+    <ol>
+        <li>
+            <strong>Cook the meat:</strong> Cook the ground meat in a skillet until browned and crumbly. Add the onion and continue cooking until it's translucent. Stir in the canned tomato products, half of the parsley, garlic, basil, 1.5 teaspoons of salt, oregano, and sugar.
+        </li>
+        <li>
+            <strong>Cook the noodles:</strong> Boil the lasagna noodles in lightly salted water until they're al dente.
+        </li>
+        <li>
+            <strong>Make the cheese layer:</strong> Mix cottage cheese, Parmesan cheese, eggs, the remaining parsley, the remaining salt, and pepper in a bowl.
+        </li>
+        <li>
+            <strong>Assemble the lasagnas:</strong> Layer the ingredients according to the recipe (starting with sauce and ending with mozzarella) until the lasagna is assembled.
+        </li>
+        <li>
+            <strong>Bake the lasagna:</strong> Cover with foil and bake in the preheated oven for about half an hour. Remove the foil and continue baking until the top is golden brown.
         </li>
     </ul>
 </body>
