feat: Easy Homemade Pizza

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="recipes/lasagna.html">Homemade Lasagna</a></li>
         <li><a href="recipes/milk-cake.html">Milk Cake</a></li>
+        <li><a href="recipes/homemade-pizza.html">Easy Homemade Pizza</a></li>
     </ul>
 </body>
 </html>
