--- a/recipes/homemade-pizza.html
+++ b/recipes/homemade-pizza.html
@@ -34,7 +34,8 @@
     <!-- Steps -->
     <h2>Steps</h2>
     <p>
-        Making homemade lasagna much easier than it looks. You'll find the full, step-by-step recipe below — but here's a brief overview of what you can expect:
+        Stretching pizza dough is the most hands-on part of the pizza crust-making process. 
+        It takes a little practice, but it's as easy as pie (pun intended). To shape the dough:
     </p>
     <ol>
         <li>
