refractor: Alt attribute of the Homemade pizza recipe image

--- a/recipes/homemade-pizza.html
+++ b/recipes/homemade-pizza.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Easy Homemade Pizza</h1>
-    <img src="../images/homemade-pizza.webp" alt="Lasagna">
+    <img src="../images/homemade-pizza.webp" alt="Homemade Pizza">
     
     <!-- Description -->
     <h2>Description</h2>
