refractor: Alt attribute of the Milk Cake recipe image

--- a/recipes/milk-cake.html
+++ b/recipes/milk-cake.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Milk Cake</h1>
-    <img src="../images/milk-cake.webp" alt="Lasagna">
+    <img src="../images/milk-cake.webp" alt="Milk Cake">
     
     <!-- Description -->
     <h2>Description</h2>
