refractor: Ingredients section of the Milk Cake recipe

--- a/recipes/milk-cake.html
+++ b/recipes/milk-cake.html
@@ -18,10 +18,10 @@
     <!-- Ingredients -->
     <h2>Ingredients</h2>
     <p>
-        These are the ingredients you'll need to make this top-rated homemade lasagna recipe:
+        You'll need three types of milk to make tres leches cake at home: regular whole milk, sweetened condensed milk, and evaporated milk.
     </p>
     <ul>
-        <li>1 ½ cups all-purpose flou</li>
+        <li>1 ½ cups all-purpose flour</li>
         <li>1 teaspoon baking powder</li>
         <li>½ cup unsalted butter</li>
         <li>1 cup white sugar</li>
