refractor: Steps section of the Milk Cake recipe

--- a/recipes/milk-cake.html
+++ b/recipes/milk-cake.html
@@ -38,7 +38,7 @@
     <!-- Steps -->
     <h2>Steps</h2>
     <p>
-        Making homemade lasagna much easier than it looks. You'll find the full, step-by-step recipe below — but here's a brief overview of what you can expect:
+        Making Milk Cake is much easier than it looks. You'll find the full, step-by-step recipe below — but here's a brief overview of what you can expect:
     </p>
     <ol>
         <li>
